toolkit/themes/windows/global/toolbarbutton.css
/
*
This
Source
Code
Form
is
subject
to
the
terms
of
the
Mozilla
Public
*
License
v
.
2
.
0
.
If
a
copy
of
the
MPL
was
not
distributed
with
this
*
file
You
can
obtain
one
at
http
:
/
/
mozilla
.
org
/
MPL
/
2
.
0
/
.
*
/
/
*
=
=
=
=
=
toolbarbutton
.
css
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
Styles
used
by
the
XUL
button
element
.
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
*
/
/
*
:
:
:
:
:
toolbarbutton
:
:
:
:
:
*
/
toolbarbutton
{
appearance
:
auto
;
-
moz
-
default
-
appearance
:
toolbarbutton
;
-
moz
-
box
-
align
:
center
;
-
moz
-
box
-
pack
:
center
;
margin
:
0
;
padding
:
3px
;
}
.
toolbarbutton
-
text
{
margin
:
0
;
text
-
align
:
center
;
}
toolbarbutton
.
tabbable
{
-
moz
-
user
-
focus
:
normal
!
important
;
}
toolbarbutton
:
-
moz
-
focusring
{
outline
:
1px
dotted
;
outline
-
offset
:
-
2px
;
}
toolbarbutton
[
disabled
=
"
true
"
]
{
color
:
GrayText
;
text
-
shadow
:
none
;
}
media
(
-
moz
-
windows
-
classic
)
{
toolbarbutton
[
disabled
=
"
true
"
]
{
color
:
ThreeDShadow
;
text
-
shadow
:
1px
1px
ThreeDHighlight
;
}
}
media
(
-
moz
-
windows
-
default
-
theme
)
{
:
root
[
lwtheme
-
image
]
toolbarbutton
{
text
-
shadow
:
none
;
}
:
root
[
lwtheme
-
image
]
toolbarbutton
:
not
(
[
disabled
=
"
true
"
]
)
{
text
-
shadow
:
inherit
;
}
}
media
(
-
moz
-
windows
-
default
-
theme
:
0
)
{
:
root
[
lwtheme
-
image
]
toolbarbutton
:
not
(
[
disabled
=
"
true
"
]
)
{
text
-
shadow
:
inherit
;
}
}
/
*
:
:
:
:
:
toolbarbutton
menu
:
:
:
:
:
*
/
.
toolbarbutton
-
menu
-
dropmarker
.
toolbarbutton
-
combined
-
buttons
-
dropmarker
{
appearance
:
none
;
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
arrow
-
down
-
12
.
svg
"
)
;
-
moz
-
context
-
properties
:
fill
;
fill
:
currentColor
;
width
:
auto
;
}
/
*
:
:
:
:
:
toolbarbutton
badged
:
:
:
:
:
*
/
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
icon
[
label
]
:
not
(
[
label
=
"
"
]
)
{
margin
-
inline
-
end
:
0
;
}
.
toolbarbutton
-
badge
{
box
-
sizing
:
border
-
box
;
overflow
:
hidden
;
white
-
space
:
nowrap
;
background
-
color
:
#
d90000
;
font
-
size
:
10px
;
font
-
weight
:
bold
;
padding
:
0
2px
1px
;
color
:
#
fff
;
text
-
shadow
:
none
;
border
-
radius
:
2px
;
box
-
shadow
:
0
1px
0
hsla
(
0
100
%
100
%
.
2
)
inset
0
-
1px
0
hsla
(
0
0
%
0
%
.
1
)
inset
0
1px
0
hsla
(
206
50
%
10
%
.
2
)
;
margin
:
-
5px
0
0
!
important
;
margin
-
inline
-
end
:
-
4px
!
important
;
min
-
width
:
14px
;
max
-
width
:
20px
;
line
-
height
:
10px
;
text
-
align
:
center
;
align
-
self
:
start
;
justify
-
self
:
end
;
}

