Bug 1728063 - Remove blur from Zoom percentage in customize mode r=jaws
Removed text-shadow from toolbarbuttons when in high contrast mode in Windows Classic themes to prevent blurry appearance of zoom percentage number.

Differential Revision: https://phabricator.services.mozilla.com/D124121

UltraBlame original commit: adb32230803a36808835c203dde1f452267976d9

--- a/toolkit/themes/windows/global/toolbarbutton.css
+++ b/toolkit/themes/windows/global/toolbarbutton.css
@@ -341,6 +341,33 @@ windows
 classic
 )
 {
+media
+not
+(
+prefers
+-
+contrast
+)
+{
+toolbarbutton
+[
+disabled
+=
+"
+true
+"
+]
+{
+text
+-
+shadow
+:
+1px
+1px
+ThreeDHighlight
+;
+}
+}
 toolbarbutton
 [
 disabled
@@ -353,14 +380,6 @@ true
 color
 :
 ThreeDShadow
-;
-text
--
-shadow
-:
-1px
-1px
-ThreeDHighlight
 ;
 }
 }
